fix(swagger): fix swagger config
